2013-01-09 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* lib/PandoraFMS/PredictionServer.pm: Fixed prediction modules.
	
	Bug id: #3599200

2013-01-08 Miguel de Dios <miguel.dedios@artica.es>
	
	* util/pandora_db.pl: fixed the SQL query for the checking modules
	status count.

2013-01-02 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* lib/PandoraFMS/Core.pm: Added macro _email_tag_ to replace with
	emails associated to module tags.

2012-12-28  Hirofumi Kosaka <kosaka@rworks.jp>

	* util/pandora_manage.pl: Added operation logging by
	logger() with verbose level 10.

2012-12-24  Ramon Novoa  <rnovoa@artica.es>
	
	* bin/pandora_server: Re-calculate module status count upon server
	  startup.

	* util/pandora_db.pl: Use new not-init status for module status count
	  calculation.

2012-12-21  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm,
	  lib/PandoraFMS/DataServer.pm,
	  util/pandora_db.pl: Implemented a real not-init status. Small fixes.

2012-12-19  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Return async modules to normal after
	  twice the module interval has elapsed.

2012-12-19  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/Core.pm: Added new function to update 
	replicated events (enterprise feature) and fix some little
	bugs

2012-12-17  Sancho Lerena <slerena@artica.es>

	* util/pandora_db.pl: Added feature to delete
	inventory data older than X days (taken from
	deletion for regular data).

2012-12-17  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/DataServer.pm: Unset a missed data of the
	parameters hash when create module on dataserver

2012-12-13  Sergio Martin <sergio.martin@artica.es>

	* conf/pandora_server.conf
	lib/PandoraFMS/Config.pm
	lib/PandoraFMS/DB.pm
	lib/PandoraFMS/Core.pm
	bin/pandora_server: Added new thread to the
	event replication process (enterprise feature) 
	and control this one and the policy queue patrol 
	process with new two configuration parameters
